main tag visibility fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ main {
     background-color: lightblue;
     /*make main take up remaining space*/
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /*footer*/
